--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -15,6 +15,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.2",
+    "@agm/js-marker-clusterer": "^1.0.0-beta.2",
     "@angular/common": "5.2.0",
     "@angular/compiler": "5.2.0",
     "@angular/core": "5.2.0",
@@ -28,6 +30,7 @@
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
     "font-awesome": "^4.7.0",
+    "js-marker-clusterer": "^1.0.0",
     "moment": "2.20.1",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.9.3",
