--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "5.2.0",
     "@angular/router": "5.2.0",
     "@angular/upgrade": "5.2.0",
+    "@swimlane/ngx-datatable": "^11.1.7",
     "bootstrap": "4.0.0-beta.3",
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
@@ -50,9 +51,9 @@
     "karma": "2.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
+    "karma-coverage-istanbul-reporter": "1.3.3",
     "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
-    "karma-coverage-istanbul-reporter": "1.3.3",
     "protractor": "5.2.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
