--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -27,9 +27,11 @@
     "@angular/router": "5.2.0",
     "@angular/upgrade": "5.2.0",
     "@swimlane/ngx-datatable": "^11.1.7",
+    "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "4.0.0-beta.3",
     "chart.js": "2.7.1",
     "core-js": "2.5.1",
+    "firebase": "^4.9.0",
     "font-awesome": "^4.7.0",
     "js-marker-clusterer": "^1.0.0",
     "moment": "2.20.1",
