--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ addons:
 #  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
 before_script:
-- npm install -g angular-cli
-- npm install -g karma
-- npm install
-- ng build
+  - npm install -g angular-cli
+  - npm install -g karma
+  - npm install
 
-script: ng test
+script: 
+  - cd www-ng
+  - ng test
