update travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ addons:
 #  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 
 before_script:
-  - npm install -g angular-cli
-  - npm install -g karma
+  - npm install -g @angular/cli
   - npm install
 
 script: 
