--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+os: linux
 dist: trusty
 language: node_js
 node_js:
@@ -9,11 +10,23 @@ addons:
 
 #before_install:
 #  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+cache:
+  yarn: true
+  directories:
+    - www-ng/node_modules
 
-before_script:
+before_install:
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+  - yarn global add @angular/cli
+
+install:
   - cd www-ng
-  - npm install --silent -g @angular/cli
-  - npm install
+  - yarn install
 
 script: 
-  - ng test --single-run
+  - yarn lint
+  - yarn build
+  - yarn test --single-run
