--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ install:
 
 script: 
   - yarn lint
-  - yarn build --progress false
+#  - yarn build --progress false
   - yarn test --progress false --single-run
