--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -37,6 +37,7 @@
     "font-awesome": "^4.7.0",
     "js-marker-clusterer": "^1.0.0",
     "moment": "2.20.1",
+    "mydaterangepicker": "^4.2.1",
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "1.9.3",
     "rxjs": "5.5.6",
