--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -39,7 +39,9 @@
     "moment": "2.20.1",
     "mydaterangepicker": "^4.2.1",
     "ng2-charts": "1.6.0",
+    "ng2-select": "^2.0.0",
     "ngx-bootstrap": "1.9.3",
+    "ngx-select-ex": "^3.3.10",
     "rxjs": "5.5.6",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
