--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -7,9 +7,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "start": "ng-swagger-gen && ng serve",
+    "build": "ng-swagger-gen && ng build",
+    "test": "ng-swagger-gen && ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "enc": "cd src/environments && encrypt environment.ts environment.ts.enc",
@@ -62,6 +62,7 @@
     "karma-coverage-istanbul-reporter": "1.3.3",
     "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
+    "ng-swagger-gen": "^0.10.0",
     "protractor": "5.2.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
