--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "5.2.0",
     "@angular/upgrade": "5.2.0",
     "@swimlane/ngx-datatable": "^11.1.7",
+    "angular2-csv": "^0.2.5",
     "angularfire2": "^5.0.0-rc.6",
     "bootstrap": "4.0.0-beta.3",
     "chart.js": "2.7.1",
