ignore prod env file

--- a/www-ng/.gitignore
+++ b/www-ng/.gitignore
@@ -1,4 +1,5 @@
 /src/environments/environment.ts
+/src/environments/environment.prod.ts
 /src/app/api/
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
