--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -43,7 +43,7 @@
     "ng-spin-kit": "^5.1.1",
     "ng2-charts": "1.6.0",
     "ng2-select": "^2.0.0",
-    "ngx-bootstrap": "1.9.3",
+    "ngx-bootstrap": "^2.0.3",
     "ngx-select-ex": "^3.3.10",
     "rxjs": "5.5.6",
     "simple-line-icons": "^2.4.1",
