--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ job:
       - npm install --silent -g @angular/cli
       - cd www-ng
       - cp src/environments/environment.sample.ts src/environments/environment.ts
-      - npm install
+      - npm install --silent
     script:
       - npm lint
       - npm test --progress false --single-run
