--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ job:
       - cd www-ng
       - cp src/environments/environment.sample.ts src/environments/environment.ts
       - npm install --silent
+      - export CHROME_HEADLESS=true
     script:
       - npm run lint
       - npm run test --progress false --single-run
