--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 # Official framework image. Look for the different tagged releases at:
 # https://hub.docker.com/r/library/node/tags/
 image: node:latest
+image: weltn24/up-docker-node-chrome-headless
 
 # Pick zero or more services to be used on all builds.
 # Only needed when using a docker container to run your tests in.
