--- a/www-ng/.gitignore
+++ b/www-ng/.gitignore
@@ -1,6 +1,7 @@
 /src/environments/environment.ts
 /src/environments/environment.prod.ts
 /src/app/api/
+documentation/
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
