remove gitlab ci txt

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,13 +19,15 @@ cache:
   - www-ng/node_modules/
 
 job:
+    only:
+      - master
     before_script:
-      - apt-get update -qy
-      - npm install --silent --unsafe-perm -g @angular/cli
+#      - apt-get update -qy
+#      - npm install --silent --unsafe-perm -g @angular/cli
       - cd www-ng
       - cp src/environments/environment.sample.ts src/environments/environment.ts
-      - npm install --silent
+      - yarn --silent
 #      - export CHROME_BIN=/usr/bin/chromium-browser
     script:
-      - npm run lint
-      - npm run test --progress false --single-run
+      - yarn lint
+      - yarn test --progress false --single-run
