--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -20,42 +20,43 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.2",
-    "@agm/js-marker-clusterer": "^1.0.0-beta.2",
-    "@angular/common": "5.2.0",
-    "@angular/compiler": "5.2.0",
-    "@angular/core": "5.2.0",
-    "@angular/forms": "5.2.0",
-    "@angular/http": "5.2.0",
-    "@angular/platform-browser": "5.2.0",
-    "@angular/platform-browser-dynamic": "5.2.0",
-    "@angular/router": "5.2.0",
-    "@angular/upgrade": "5.2.0",
-    "@swimlane/ngx-datatable": "^11.1.7",
+    "@agm/core": "^1.0.0-beta",
+    "@agm/js-marker-clusterer": "^1.0.0-beta",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "@angular/upgrade": "^5.0.0",
+    "@swimlane/ngx-datatable": "^11.1.0",
     "angular2-csv": "^0.2.5",
-    "angularfire2": "^5.0.0-rc.6",
-    "bootstrap": "4.0.0-beta.3",
-    "chart.js": "2.7.1",
-    "core-js": "2.5.1",
-    "firebase": "^4.9.0",
+    "angularfire2": "^5.0.0-rc",
+    "bootstrap": "^4.0.0",
+    "chart.js": "^2.7.0",
+    "core-js": "^2.5.0",
+    "firebase": "~4.12.1",
     "font-awesome": "^4.7.0",
     "js-marker-clusterer": "^1.0.0",
-    "moment": "2.20.1",
-    "mydaterangepicker": "^4.2.1",
-    "ng-spin-kit": "^5.1.1",
+    "moment": "^2.20.0",
+    "mydaterangepicker": "^4.2.0",
+    "ng-spin-kit": "^5.1.0",
     "ng2-charts": "1.6.0",
+    "ng2-date-picker": "^2.9.0",
     "ng2-select": "^2.0.0",
     "ngx-bootstrap": "^2.0.3",
     "ngx-select-ex": "^3.3.10",
-    "rxjs": "5.5.6",
+    "rxjs": "^5.0.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.6.5",
-    "@angular/compiler-cli": "5.2.0",
-    "@compodoc/compodoc": "^1.1.2",
+    "@angular/cli": "^1.7.0",
+    "@angular/compiler-cli": "^5.0.0",
+    "@compodoc/compodoc": "^1.1.0",
     "@types/jasmine": "2.8.4",
     "@types/node": "9.3.0",
     "codelyzer": "4.1.0",
@@ -68,7 +69,7 @@
     "karma-coverage-istanbul-reporter": "1.3.3",
     "karma-jasmine": "1.1.1",
     "karma-jasmine-html-reporter": "0.2.2",
-    "ng-swagger-gen": "^0.10.0",
+    "ng-swagger-gen": "^0.11.3",
     "protractor": "5.2.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
