--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng-swagger-gen && ng serve",
+    "start": "ng serve",
     "build": "ng-swagger-gen && ng build",
     "deploy": "ng build --prod -vc false -oh none",
     "postdeploy": "cd /var/www/html && sudo rm -rf cats-bak && sudo mv cats cats-bak && sudo cp -r ~/CATS/source/iocCATS/www . && sudo mv www cats && cd ~/CATS/source/iocCATS/www-ng",
@@ -22,17 +22,16 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta",
     "@agm/js-marker-clusterer": "^1.0.0-beta",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@angular/upgrade": "^5.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
+    "@angular/upgrade": "^6.0.0",
     "@swimlane/ngx-datatable": "^11.1.0",
-    "angular2-csv": "^0.2.5",
     "angularfire2": "^5.0.0-rc",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.0",
@@ -46,19 +45,22 @@
     "ng2-date-picker": "^2.9.0",
     "ng2-select": "^2.0.0",
     "ngx-bootstrap": "^2.0.3",
+    "ngx-papaparse": "^2.1.0",
     "ngx-select-ex": "^3.3.10",
-    "rxjs": "^5.0.0",
+    "rxjs": "6",
+    "rxjs-compat": "6",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.0",
-    "@angular/compiler-cli": "^5.0.0",
+    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
     "@compodoc/compodoc": "^1.1.0",
     "@types/jasmine": "2.8.4",
     "@types/node": "9.3.0",
-    "codelyzer": "4.1.0",
+    "codelyzer": "^4.0.0",
     "config-leaf": "^0.3.0",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
@@ -72,7 +74,7 @@
     "protractor": "5.2.2",
     "ts-node": "4.1.0",
     "tslint": "5.9.1",
-    "typescript": "2.5.3"
+    "typescript": "2.7.2"
   },
   "engines": {
     "node": ">= 6.9.0",
