remove --single-run because of ng cli 6 upgrade

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,4 +30,4 @@ job:
 #      - export CHROME_BIN=/usr/bin/chromium-browser
     script:
       - yarn lint
-      - yarn test --progress false --single-run
+      - yarn test --progress false 
