restore rxjs compat because of agm dependency on rxjs5, and add file .yarnclean

--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -48,7 +48,7 @@
     "ngx-papaparse": "^2.1.0",
     "ngx-select-ex": "^3.3.10",
     "rxjs": "6",
-    "rxjs-compat": "6",
+    "rxjs-compat": "^6.1.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.20"
