fix ng6 deploy issue in angular.json

--- a/www-ng/angular.json
+++ b/www-ng/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "@coreui/angular": {
+    "ioccats": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -30,7 +30,7 @@
             ]
           },
           "configurations": {
-            "prod": {
+            "production": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -43,18 +43,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "@coreui/angular:build"
+            "browserTarget": "ioccats:build"
           },
           "configurations": {
-            "prod": {
-              "browserTarget": "@coreui/angular:build:prod"
+            "production": {
+              "browserTarget": "ioccats:build:prod"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "@coreui/angular:build"
+            "browserTarget": "ioccats:build"
           }
         },
         "test": {
@@ -90,7 +90,7 @@
         }
       }
     },
-    "@coreui/angular-e2e": {
+    "ioccats-e2e": {
       "root": "",
       "sourceRoot": "",
       "projectType": "application",
@@ -99,7 +99,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "@coreui/angular:serve"
+            "devServerTarget": "ioccats:serve"
           }
         },
         "lint": {
@@ -114,7 +114,7 @@
       }
     }
   },
-  "defaultProject": "@coreui/angular",
+  "defaultProject": "ioccats",
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "app",
