--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -32,11 +32,11 @@
     "@angular/router": "^6.0.0",
     "@angular/upgrade": "^6.0.0",
     "@swimlane/ngx-datatable": "^11.1.0",
-    "angularfire2": "^5.0.0-rc",
+    "angularfire2": "^5.0.0-rc.9",
     "bootstrap": "^4.0.0",
     "chart.js": "^2.7.0",
     "core-js": "^2.5.0",
-    "firebase": "~4.12.1",
+    "firebase": "^5.0.3",
     "font-awesome": "^4.7.0",
     "js-marker-clusterer": "^1.0.0",
     "moment": "^2.20.0",
