--- a/www-ng/angular.json
+++ b/www-ng/angular.json
@@ -21,6 +21,7 @@
               "src/manifest.json"
             ],
             "styles": [
+	      "src/assets/styles/icons.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/simple-line-icons/css/simple-line-icons.css",
               "src/scss/style.scss"
