--- a/www-ng/angular.json
+++ b/www-ng/angular.json
@@ -39,7 +39,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "serviceWorker": false
+              "serviceWorker": true
             }
           }
         },
