--- a/www-ng/package.json
+++ b/www-ng/package.json
@@ -52,7 +52,8 @@
     "rxjs-compat": "^6.1.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.20"
+    "zone.js": "0.8.20",
+    "@angular/service-worker": "^6.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.0",
