--- a/www-ng/.gitignore
+++ b/www-ng/.gitignore
@@ -2,6 +2,7 @@
 /src/environments/environment.prod.ts
 /src/app/api/
 documentation/
+.vscode
 
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
